--- a/index.html
+++ b/index.html
@@ -1415,6 +1415,24 @@
         </div>
       </div>
       <!-- Contribution by Subhanu ends -->
+ 
+        <div class="grid-item">
+                  <div class="card">
+                    <div class="img-cont">
+                      <img class="card-img"
+                        src="https://media.istockphoto.com/photos/gold-crown-picture-id160231072?k=20&m=160231072&s=612x612&w=0&h=bsbqni3YhMf446dF7eSJ0fSF7RHgP4ZQCH3SaS-zLnM="
+                        alt="" />
+                    </div>
+                    <div class="card-content">
+                      <h1 class="card-header">👑</h1>
+                      <p class="card-text">
+                        "GETTING CROWN NEEDS COURAGE ."
+                      </p>
+                      <h3>by RAVI TIWARY</h3>
+                      <button class="card-btn">Click Here</button>
+                    </div>
+                  </div>
+        </div>
 
       <script src="dark .js"></script>
 
